swapped some parseNum and new Num to valueOf